# pyshinywikidata

./: LICENSE  README.md  app.py  manifest.json  pyproject.toml  requirements.txt  testmodule.py
.github/workflows/: deploy.yml  update-requirements.yaml
src/pyshinywikidata/: app.py
src/pyshinywikidata/fct/: functions.py
