[project]
name = "pyshinywikidata"
version = "0.0.1"
authors = [
  { name="Novica Nakov", email="nnovica@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.11.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=2.2.3",
    "shiny>=1.1.0",
    "sparqlwrapper>=2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/novica/pyshinywikidata"
"Bug Tracker" = "https://github.com/novica/pyshinywikidata/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
